# real-estate-rag-eval-training

./: .env.sample  .gitignore  README.md  config.py  docker-compose.yml  pyproject.toml
data/testing_dataset_twhg_with_latlng_and_places/: property_002_26283446.json  property_004_07415828.json  property_007_87207627.json  property_008_63683364.json  property_009_72339406.json  property_013_85816414.json  property_014_85582199.json  property_015_78845009.json  property_016_41035356.json  property_017_26753582.json  property_019_17996754.json  property_021_28537248.json  property_022_16274174.json  property_023_65590447.json  property_024_99211648.json  property_033_70757830.json  property_037_15297698.json  property_038_74600719.json  property_039_99755294.json  property_040_95287800.json  property_046_26948382.json  property_049_29092252.json  property_050_92183453.json  property_051_73549750.json  property_052_66852145.json  property_053_94243413.json  property_055_13484025.json  property_057_25460285.json  property_062_31177522.json  property_063_22746567.json  property_064_98195427.json  property_068_42111437.json  property_069_27904222.json  property_073_96599075.json  property_075_46624873.json  property_077_65421752.json  property_078_85683420.json  property_081_30049209.json  property_082_10146603.json  property_083_79091982.json  (+7 more)
data/twhg_with_latlng_and_places/: property_001_75368309.json  property_002_26283446.json  (+64 more)
docs/: task_1.md  task_2.md
reports/: v1_task1_evaluation_report.md
scripts/: clean_raw_data.py  generate_tesing_dataset.py
(+358 files in other folders)
