[project]
name = "real-estate-rag-eval-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.56.0",
    "neo4j>=6.0.3",
    "notebook>=7.5.1",
    "openai>=2.14.0",
    "tqdm>=4.67.1",
]
