[project]
name = "real-estate-rag-eval-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.56.0",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.2",
    "langchain-openai>=1.1.6",
    "neo4j>=6.0.3",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "tqdm>=4.67.1",
]
